# support_chat1

./: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  railway.toml
src/myvelocity_ai_chatbot/: main.py
src/myvelocity_ai_chatbot/api/: routes.py
src/myvelocity_ai_chatbot/configs/: logger.py  settings.py
src/myvelocity_ai_chatbot/llm_config/: embeddings.py  weaviate_client.py
src/myvelocity_ai_chatbot/models/: schema.py
src/myvelocity_ai_chatbot/services/: cache_service.py  claude_llm_service.py  rag_service.py  retriever.py
src/myvelocity_ai_chatbot/weaviate_query/: data_service.py
